prova/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-http-stable
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node-http
  template:
    metadata:
      labels:
        app: node-http
    spec:
      containers:
      - name: node-http
        image: markittos1/node-http:1.0
        ports:
        - containerPort: 8080
