prova/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-http
spec:
  selector:
    app: node-http
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
