prova/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-http-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /node
        pathType: Prefix
        backend:
          service:
            name: node-http
            port:
              number: 8080
